# glc-lib

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  travis.yml
examples/: car-demo  shortest-path  shortest-path.cpp
glc-lib/: CMakeLists.txt  README.md  glc-lib.kdev4
glc-lib/examples/: parking-demo.cpp  shortest-path
glc-lib/include/: glc_adapter.h  glc_interface.h  glc_planner.h  glc_utils.h  math_utils.h
glc-lib/plots/: shortest_path_nodes.txt  shortest_path_viewer.py
glc-lib/src/: shortest-path.cpp
include/: glc_adapter.h  glc_interface.h  glc_planner.h  glc_utils.h  math_utils.h
include/glc/: glc_interface.h  glc_interpolation.h  glc_logging.h  glc_math.h  glc_node.h  glc_numerical_integration.h  glc_parameters.h  glc_planner_core.h  glc_state_equivalence_class.h
plots/: shortest_path.txt  shortest_path_nodes.txt  shortest_path_viewer.py
src/glc/: glc_interface.cpp  glc_interpolation.cpp  glc_logging.cpp  glc_math.cpp  glc_node.cpp  glc_numerical_integration.cpp  glc_parameters.cpp  glc_planner_core.cpp  glc_state_equivalence_class.cpp
test/: .test_glc_state_equivalence_class.cpp.kate-swp  base_test.cpp  sample_interface.h  test_glc_math.cpp  test_glc_state_equivalence_class.cpp
